add  more available cars

--- a/web/index.html
+++ b/web/index.html
@@ -2594,7 +2594,7 @@
     </section>
 -->
 
-    <section id="CustomerDashBoard" style="width: 100%; height: 100% ;background-color: whitesmoke;position: relative">
+    <section id="CustomerDashBoard" style="width: 100%; height: 250% ;background-color: whitesmoke;">
 
         <img src="assets/images/1200x-1.jpg" alt="bg image" style="width: 100%; height: 75vh" class="img-fluid">
 
@@ -2618,7 +2618,8 @@
         </div>
 
         <!--sort section and available cars-->
-        <div class="row w-100 h-25 mt-3 text-center" style="position: relative;top: 25%">
+        <div class="row w-100 h-25 mt-3 text-center mb-5" style="position: relative;top: 8%">
+
             <figure class="text-center mt-3 text-black">
                 <blockquote class="blockquote" style="border: 1px solid transparent">
                     <p class="display-1" style="font-family: emoji">SELECT VEHICLE YOU LIKE</p>
@@ -2631,7 +2632,7 @@
                 </figcaption>
                 <div>
                     <label for="sort" class="form-label" style="display: inline">SORT :</label>
-                    <select aria-label="Default select example" class="form-select shadow center-block w-25 mb-5" style="height: 38px;z-index: 2;display: inline" id="sort">
+                    <select aria-label="Default select example" class="form-select shadow center-block w-25" style="height: 38px;z-index: 2;display: inline" id="sort">
                         <option selected value="0">Recommended</option>
                         <option value="1">Low to High</option>
                         <option value="2">High to Low</option>
@@ -2639,14 +2640,13 @@
                 </div>
             </figure>
 
-
         </div>
 
         <!--all cars-->
-        <div class="center-block " style="width: 80%;height: 75vh;position: relative;top:22%;">
+        <div class="center-block" style="width: 80%;height: 75vh; position: relative;top: -138px;">
 
-           <div class="row h-100">
-               <div class="col center-block bg-white mt-5 me-3 ms-3 thumbnail shadow" style="height: 100%;">
+           <div class="row h-100 mb-5">
+               <div class="col center-block bg-white me-3 ms-3 thumbnail shadow" style="height: 100%;">
 
                    <div class="bg-info w-100" style="height: 10%;position: relative;">
                        <p class="text-white text-center fa-2x">BMW</p>
@@ -2719,7 +2719,7 @@
                    </div>
 
                </div>
-               <div class="col center-block bg-white mt-5 me-3 ms-3 thumbnail shadow" style="height: 100%;">
+               <div class="col center-block bg-white me-3 ms-3 thumbnail shadow" style="height: 100%;">
 
                    <div class="bg-info w-100" style="height: 10%;position: relative;">
                        <p class="text-white text-center fa-2x">BMW</p>
@@ -2792,7 +2792,7 @@
                    </div>
 
                </div>
-               <div class="col center-block bg-white mt-5 me-3 ms-3 thumbnail shadow" style="height: 100%;">
+               <div class="col center-block bg-white me-3 ms-3 thumbnail shadow" style="height: 100%;">
 
                    <div class="bg-info w-100" style="height: 10%;position: relative;">
                        <p class="text-white text-center fa-2x">BMW</p>
@@ -2865,7 +2865,7 @@
                    </div>
 
                </div>
-               <div class="col center-block bg-white mt-5 me-3 ms-3 thumbnail shadow" style="height: 100%;">
+               <div class="col center-block bg-white me-3 ms-3 thumbnail shadow" style="height: 100%;">
 
                    <div class="bg-info w-100" style="height: 10%;position: relative;">
                        <p class="text-white text-center fa-2x">BMW</p>
@@ -2940,11 +2940,309 @@
                </div>
            </div>
 
+           <div class="row h-100 mb-5">
+
+               <div class="col center-block bg-white mt-5 me-3 ms-3 thumbnail shadow" style="height: 100%;">
+
+                   <div class="bg-info w-100" style="height: 10%;position: relative;">
+                       <p class="text-white text-center fa-2x">BMW</p>
+                   </div>
+
+                   <img src="assets/images/1200x-1.jpg" alt="" class="img-responsive img-thumbnail shadow w-100 h-25">
+
+                   <h3 class="text-center text-primary" id="availableOrNotLabel2">Available</h3>
+
+                   <hr class="divider-horizontal-blurry mt-0" />
+
+                   <h4 class="fw-light text-danger ms-5 me-5 mb-5" style="display: inline"><p style="display: inline">$</p>250<p style="display: inline">/day</p></h4>
+                   <h4 class="text-danger  fw-light mb-5" style="display: inline"><p style="display: inline">$</p>500<p style="display: inline">/month</p></h4>
+
+                   <div class="container-fluid mt-5">
+
+                       <div class="row mb-3">
+                           <div class="col " id="labelType5">
+                               <i class="fas fa-car text-primary ms-2"></i>
+                               General
+                           </div>
+                           <div class="col" id="labelPPassengers5" style="display: inline">
+                               <i class="fas fa-chair text-primary ms-2"></i>
+                               5
+                               <p style="display: inline">seats</p>
+                           </div>
+                       </div>
+
+                       <div class="row  mb-3">
+                           <div class="col " id="labelColour5">
+                               <i class="fas fa-palette text-primary ms-2"></i>
+                               Black
+                           </div>
+                           <div class="col ">
+                               <i class="far fa-snowflake text-primary ms-2"></i>
+                               A/C
+                           </div>
+                       </div>
+
+                       <div class="row mb-3">
+                           <div class="col " id="labelFuelType5">
+                               <i class="fas fa-oil-can text-primary ms-2"></i>
+                               Petrol
+                           </div>
+                           <div class="col " id="labelTransmissionType5">
+                               <i class="fab fa-adn text-primary ms-2"></i>
+                               Auto
+                           </div>
+                       </div>
+
+                       <div class="row mb-3">
+                           <div class="col " style="display: inline" id="labelFreeKMForDay5">
+                               <i class="fas fa-road text-primary ms-2"></i>
+                               2
+                               <p style="display: inline;">km free/day</p>
+                           </div>
+                           <div class="col " style="display: inline" id="labelExtraKMPrice5">
+                               <i class="fas fa-dollar-sign text-primary ms-2"></i>
+                               12.00
+                               <p style="display: inline"> /extra km</p>
+                           </div>
+                       </div>
+
+                   </div>
+
+                   <hr class="divider-horizontal-blurry " />
+
+                   <div class="center-block">
+                       <button type="button" class="center-block btn btn-success  btnRentNow" >Rent Now</button>
+                   </div>
+
+               </div>
+               <div class="col center-block bg-white mt-5 me-3 ms-3 thumbnail shadow" style="height: 100%;">
+
+                   <div class="bg-info w-100" style="height: 10%;position: relative;">
+                       <p class="text-white text-center fa-2x">BMW</p>
+                   </div>
+
+                   <img src="assets/images/1200x-1.jpg" alt="" class="img-responsive img-thumbnail shadow w-100 h-25">
+
+                   <h3 class="text-center text-primary">Available</h3>
+
+                   <hr class="divider-horizontal-blurry mt-0" />
+
+                   <h4 class="fw-light text-danger ms-5 me-5 mb-5" style="display: inline"><p style="display: inline">$</p>250<p style="display: inline">/day</p></h4>
+                   <h4 class="text-danger  fw-light mb-5" style="display: inline"><p style="display: inline">$</p>500<p style="display: inline">/month</p></h4>
+
+                   <div class="container-fluid mt-5">
+
+                       <div class="row mb-3">
+                           <div class="col " id="labelType6">
+                               <i class="fas fa-car text-primary ms-2"></i>
+                               General
+                           </div>
+                           <div class="col" id="labelPPassengers6" style="display: inline">
+                               <i class="fas fa-chair text-primary ms-2"></i>
+                               5
+                               <p style="display: inline">seats</p>
+                           </div>
+                       </div>
+
+                       <div class="row  mb-3">
+                           <div class="col " id="labelColour6">
+                               <i class="fas fa-palette text-primary ms-2"></i>
+                               Black
+                           </div>
+                           <div class="col ">
+                               <i class="far fa-snowflake text-primary ms-2"></i>
+                               A/C
+                           </div>
+                       </div>
+
+                       <div class="row mb-3">
+                           <div class="col " id="labelFuelType6">
+                               <i class="fas fa-oil-can text-primary ms-2"></i>
+                               Petrol
+                           </div>
+                           <div class="col " id="labelTransmissionType6">
+                               <i class="fab fa-adn text-primary ms-2"></i>
+                               Auto
+                           </div>
+                       </div>
+
+                       <div class="row mb-3">
+                           <div class="col " style="display: inline" id="labelFreeKMForDay6">
+                               <i class="fas fa-road text-primary ms-2"></i>
+                               2
+                               <p style="display: inline;">km free/day</p>
+                           </div>
+                           <div class="col " style="display: inline" id="labelExtraKMPrice6">
+                               <i class="fas fa-dollar-sign text-primary ms-2"></i>
+                               12.00
+                               <p style="display: inline"> /extra km</p>
+                           </div>
+                       </div>
+
+                   </div>
+
+                   <hr class="divider-horizontal-blurry " />
+
+                   <div class="center-block">
+                       <button type="button" class="center-block btn btn-success  btnRentNow" >Rent Now</button>
+                   </div>
+
+               </div>
+               <div class="col center-block bg-white mt-5 me-3 ms-3 thumbnail shadow" style="height: 100%;">
+
+                   <div class="bg-info w-100" style="height: 10%;position: relative;">
+                       <p class="text-white text-center fa-2x">BMW</p>
+                   </div>
+
+                   <img src="assets/images/1200x-1.jpg" alt="" class="img-responsive img-thumbnail shadow w-100 h-25">
+
+                   <h3 class="text-center text-primary">Available</h3>
+
+                   <hr class="divider-horizontal-blurry mt-0" />
+
+                   <h4 class="fw-light text-danger ms-5 me-5 mb-5" style="display: inline"><p style="display: inline">$</p>250<p style="display: inline">/day</p></h4>
+                   <h4 class="text-danger  fw-light mb-5" style="display: inline"><p style="display: inline">$</p>500<p style="display: inline">/month</p></h4>
+
+                   <div class="container-fluid mt-5">
+
+                       <div class="row mb-3">
+                           <div class="col " id="labelType7">
+                               <i class="fas fa-car text-primary ms-2"></i>
+                               General
+                           </div>
+                           <div class="col" id="labelPPassengers7" style="display: inline">
+                               <i class="fas fa-chair text-primary ms-2"></i>
+                               5
+                               <p style="display: inline">seats</p>
+                           </div>
+                       </div>
+
+                       <div class="row  mb-3">
+                           <div class="col " id="labelColour7">
+                               <i class="fas fa-palette text-primary ms-2"></i>
+                               Black
+                           </div>
+                           <div class="col ">
+                               <i class="far fa-snowflake text-primary ms-2"></i>
+                               A/C
+                           </div>
+                       </div>
+
+                       <div class="row mb-3">
+                           <div class="col " id="labelFuelType7">
+                               <i class="fas fa-oil-can text-primary ms-2"></i>
+                               Petrol
+                           </div>
+                           <div class="col " id="labelTransmissionType7">
+                               <i class="fab fa-adn text-primary ms-2"></i>
+                               Auto
+                           </div>
+                       </div>
+
+                       <div class="row mb-3">
+                           <div class="col " style="display: inline" id="labelFreeKMForDay7">
+                               <i class="fas fa-road text-primary ms-2"></i>
+                               2
+                               <p style="display: inline;">km free/day</p>
+                           </div>
+                           <div class="col " style="display: inline" id="labelExtraKMPrice7">
+                               <i class="fas fa-dollar-sign text-primary ms-2"></i>
+                               12.00
+                               <p style="display: inline"> /extra km</p>
+                           </div>
+                       </div>
+
+                   </div>
+
+                   <hr class="divider-horizontal-blurry " />
+
+                   <div class="center-block">
+                       <button type="button" class="center-block btn btn-success  btnRentNow" >Rent Now</button>
+                   </div>
+
+               </div>
+               <div class="col center-block bg-white mt-5 me-3 ms-3 thumbnail shadow" style="height: 100%;">
+
+                   <div class="bg-info w-100" style="height: 10%;position: relative;">
+                       <p class="text-white text-center fa-2x">BMW</p>
+                   </div>
+
+                   <img src="assets/images/1200x-1.jpg" alt="" class="img-responsive img-thumbnail shadow w-100 h-25">
+
+                   <h3 class="text-center text-primary">Available</h3>
+
+                   <hr class="divider-horizontal-blurry mt-0" />
+
+                   <h4 class="fw-light text-danger ms-5 me-5 mb-5" style="display: inline"><p style="display: inline">$</p>250<p style="display: inline">/day</p></h4>
+                   <h4 class="text-danger  fw-light mb-5" style="display: inline"><p style="display: inline">$</p>500<p style="display: inline">/month</p></h4>
+
+                   <div class="container-fluid mt-5">
+
+                       <div class="row mb-3">
+                           <div class="col " id="labelType8">
+                               <i class="fas fa-car text-primary ms-2"></i>
+                               General
+                           </div>
+                           <div class="col" id="labelPPassengers8" style="display: inline">
+                               <i class="fas fa-chair text-primary ms-2"></i>
+                               5
+                               <p style="display: inline">seats</p>
+                           </div>
+                       </div>
+
+                       <div class="row  mb-3">
+                           <div class="col " id="labelColour8">
+                               <i class="fas fa-palette text-primary ms-2"></i>
+                               Black
+                           </div>
+                           <div class="col ">
+                               <i class="far fa-snowflake text-primary ms-2"></i>
+                               A/C
+                           </div>
+                       </div>
+
+                       <div class="row mb-3">
+                           <div class="col " id="labelFuelType8">
+                               <i class="fas fa-oil-can text-primary ms-2"></i>
+                               Petrol
+                           </div>
+                           <div class="col " id="labelTransmissionType8">
+                               <i class="fab fa-adn text-primary ms-2"></i>
+                               Auto
+                           </div>
+                       </div>
+
+                       <div class="row mb-3">
+                           <div class="col " style="display: inline" id="labelFreeKMForDay8">
+                               <i class="fas fa-road text-primary ms-2"></i>
+                               2
+                               <p style="display: inline;">km free/day</p>
+                           </div>
+                           <div class="col " style="display: inline" id="labelExtraKMPrice8">
+                               <i class="fas fa-dollar-sign text-primary ms-2"></i>
+                               12.00
+                               <p style="display: inline"> /extra km</p>
+                           </div>
+                       </div>
+
+                   </div>
+
+                   <hr class="divider-horizontal-blurry " />
+
+                   <div class="center-block">
+                       <button type="button" class="center-block btn btn-success  btnRentNow" >Rent Now</button>
+                   </div>
+
+               </div>
+
+           </div>
+
         </div>
+
+        <div class="bg-black w-100 h-25" style="position: relative;top: 30%">k</div>
 
     </section>
 
-    <section></section>
 
     <section id="RentCars"  style="width: 100%; height: 100vh ;background-color: whitesmoke">
 
@@ -3031,8 +3329,6 @@
             </div>
 
         </div>
-
-
 
     </section>
 
